# NSCppPluginTemplate

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
src/: CppPluginExample.cpp  CppPluginExample.h  PluginConfiguration.h
src/interfaces/: Northstar.cpp  Northstar.h  interfaces.cpp  interfaces.h
src/interfaces/Northstar/: INSSys.h
src/interfaces/exposed/IPluginCallbacks/: IPluginCallbacks.cpp  IPluginCallbacks.h
src/interfaces/exposed/IPluginId/: IPluginId.cpp  IPluginId.h
